creusot/tests/should_fail/prusti/at_expiry/infer_param.stderr
error[creusot]: at_expiry must be given an explicit region
 --> infer_param.rs:4:20
  |
4 | #[after_expiry('a, at_expiry::<'_>(true))]
  |                    ^^^^^^^^^^^^^^^

error: aborting due to previous error

